# aps

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTEXT_ENGINEERING.md  FAQ.md  Makefile  PROJECT.md  README.md  pyproject.toml
deploy/: dynamodb_prompt_table.yaml
deploy/ecs/: service.json  task-definition.json
deploy/eks/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
deploy/rhel/: install.sh  logrotate.conf
docker/: .dockerignore  Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  healthcheck.py
docs/plans/: 2026-03-01-enterprise-hardening.md
infra/sam/: samconfig.toml  template.yaml
rules/: default_rules.yaml
src/pageindex_rag/: __init__.py  config.py  exceptions.py  models.py
src/scout_ai/: __init__.py  config.py  exceptions.py  models.py
tests/: conftest.py
tests/eval/: golden_dataset.py  retrieval_evaluator.py  test_eval_harness.py
tests/fakes/: __init__.py  fake_context_cache.py  fake_inference.py  fake_model.py  fake_persistence.py
tests/fixtures/: sample_aps_pages.json  sample_questions.json  sample_tree_index.json
tests/integration/: test_cached_extraction.py  test_compressed_extraction.py  test_context_cache_pipeline.py  test_extraction_pipeline.py  test_factored_extraction.py  test_indexer_integration.py  test_retrieval_integration.py
tests/unit/: test_agent_prompt_routing.py  test_api_auth.py  test_aps_models.py  test_async_indexing.py  test_audit_hook_dimensions.py  test_cache_config.py  test_circuit_breaker_external.py  test_citation_propagation.py  test_context_cache.py  test_context_cache_key.py  test_context_compression.py  test_models.py  (+35 more)
(+243 files in other folders)
